# reown-relay

./: Cargo.toml  README.md
.github/workflows/: check.yml  ci.yaml  nostd.yml  publish.yml  release.yaml  safety.yml
client/: Cargo.toml
client/src/: error.rs  lib.rs  websocket.rs
client/src/websocket/: inbound.rs  outbound.rs  stream.rs
relay_client/: Cargo.toml
relay_client/src/: error.rs  http.rs  lib.rs
relay_client/src/websocket/: fetch.rs  stream.rs
relay_rpc/: Cargo.toml
relay_rpc/src/: auth.rs
rpc/: Cargo.toml
rpc/src/: domain.rs
wasm_websocket_demo/: Cargo.toml
wasm_websocket_demo/src/: lib.rs  utils.rs
