# Root Crate
[workspace.package]
edition = "2021"
authors = ["Cartera Mesh <gh@cartera-mesh.com>"]
license = "Apache-2.0"
repository = "https://github.com/CarteraMesh/reown-relay"
description = "Reown (WalletConnect) wasm client"
homepage = "https://cartera-mesh.com"
keywords = ["blockchain", "reown", "walletconnect", "wasm"]
categories = ["wasm", "web-programming::websocket", "cryptography::cryptocurrencies" ]

[workspace]
resolver = "2"
members = ["relay_client", "relay_rpc", "wasm_websocket_demo"]

[workspace.dependencies]
anyhow = "1"
structopt = { version = "0.3", default-features = false }
tokio = { version = "1.22", features = ["full"] }
url = "2.3"
warp = { version = "0.3", default-features = false }
serde_json = "1.0"
rand = "0.8.5"
futures-util = "0.3"
once_cell = "1.19"

[workspace.lints.clippy]
indexing_slicing = "deny"
