# Root Crate
[workspace.package]
edition = "2021"
authors = ["Cartera Mesh <gh@cartera-mesh.com>"]
license = "Apache-2.0"
repository = "https://github.com/CarteraMesh/reown-relay"
description = "Reown (WalletConnect) wasm client"
homepage = "https://cartera-mesh.com"
keywords = ["blockchain", "reown", "walletconnect", "wasm"]
categories = ["wasm", "web-programming::websocket", "cryptography::cryptocurrencies" ]

[workspace]
resolver = "2"
members = ["client", "rpc", "wasm_websocket_demo"]

[workspace.dependencies]
anyhow = "1"
bs58 = "0.5"
chrono = { version = "0.4", default-features = false, features = [ "std",    "clock",    "wasmbind",    "wasm-bindgen",] }
data-encoding = "2.3"
derive_more = { version = "0.99", default-features = false, features = [    "display", "from", "as_ref", "as_mut" ] }
ed25519-dalek = { version = "2.1.1", features = ["rand_core"] }
futures-util = { version = "0.3", default-features = false, features = ["sink", "std"] }
futures = { version = "0.3"}
http = { version = "1"}
jsonwebtoken = "9"
once_cell = "1.16"
pin-project = { version = "1"}
rand = "0.8"
regex = "1.7"
serde-aux = { version = "4.1", default-features = false }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive", "rc"] }
serde_qs = "0.13"
sha2 = { version = "0.10.6" }
structopt = { version = "0.3", default-features = false }
strum = { version = "0.26", features = ["strum_macros", "derive"] }
thiserror = "2"

tokio = { version = "1", features = ["rt", "time", "sync", "macros"] }
# tokio = { version = "1.22", features = ["full"] }
url = "2"
warp = { version = "0.3", default-features = false }



[workspace.lints.clippy]
indexing_slicing = "deny"
