[package]
name = "reown-relay-client"
version = "0.1.0-rc1"
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true
description.workspace = true
homepage.workspace = true
keywords.workspace = true

[features]
default = ["tokio-tungstenite/native-tls", "tokio-tungstenite/url"]
rustls = ["tokio-tungstenite/rustls-tls-native-roots", "tokio-tungstenite/url"]

[dependencies]
reown-relay-rpc = { path = "../relay_rpc" }
futures-util = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_qs = { workspace = true }
pin-project = { workspace = true}
chrono =  { workspace = true }
url = { workspace = true }
http =  {workspace = true}
reqwest = {  workspace = true }
tokio =  { workspace = true }
futures-channel = "0.3"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio-tungstenite = { version = "0.24" }

[target.'cfg(target_arch = "wasm32")'.dependencies]
tokio-tungstenite-wasm = { version = "0.5" }
wasm-bindgen-futures = { version = "0.4" }
web-sys = { version = "0.3" , features = ["ConsoleEvent"] }
getrandom = { version = "0.2" , features = ["wasm-bindgen", "js"]}

[lints.clippy]
indexing_slicing = "deny"

# [[example]]
# name = "websocket_client"
#
# [[example]]
# name = "http_client"
#
# [[example]]
# name = "webhook"
#

