[package]
name = "reown-relay-rpc"
version = "0.1.0-rc1"
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true
description.workspace = true
homepage.workspace = true
keywords.workspace = true

[dependencies]
bs58 = {workspace = true }
data-encoding = { workspace = true }
derive_more = {  workspace = true } 
serde = { workspace = true }
serde-aux =  { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
ed25519-dalek =  { workspace = true }
rand = { workspace = true }
chrono =  { workspace = true }
regex = { workspace = true }
once_cell = { workspace = true }
jsonwebtoken = { workspace = true }
sha2 = { workspace = true  }
strum = { workspace = true }

[lints.clippy]
indexing_slicing = "deny"
