[package]
name = "wasm_websocket_demo"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = { workspace = true }
console_error_panic_hook = { version = "0.1" }
data-encoding = "2"
futures = { workspace = true }
getrandom = { version = "0.2", features = ["js"] }
gloo-timers = { version = "0.3", features = ["futures"] }
rand = { workspace = true }
reown-relay-client = { path = "../client/" }
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
wasm-bindgen-futures = "0.4"
web-time = { version = "1", features = ["serde"] }
web-sys = { version = "0.3", features = [
    "Element", "HtmlElement", "Window",
    "WebSocket", "console", "Event",
    "Document", "Crypto", "CryptoKey",
    "DateTimeValue", "SubtleCrypto", "Performance",
    "TimeEvent"
] }


[package.metadata.wasm-pack.profile.dev]
wasm-bindgen = { debug-js-glue = true, demangle-name-section = true }
wasm-opt = false


